# Leetcode-1

./: CMakeLists.txt
Algorithm/: Heapsort.py  IBM-3.py  MergeSort.py  QuickSort.py  test.py
BlackRock/: change.cpp  loan.java
Citadel/: junglebook.py
Company/: didi.py
Company/Atlassian/: CityAttractions.py  MaximumStreak.py  Reconstruct.py  WorkSchedule.py
Company/BlackRock/: portfolio.java
Company/ByteDance/: CoinChange.py  PrizeNumber.py  StringReduce.py
Company/Citadel/: palindrome.py
Company/Cluttter/: 1.py
Company/Dropbox/: 924.py
Company/GS/: GridGame.py  MatrixGame.py
Company/Indeed/: DistinctPairs.py  maxPoints.py  winner.py
Company/Microsoft/: Microsoft List.txt
Company/Pinduoduo/: 4.py
Company/PureStorage/: 1.py
Company/Tencent/: 1.py  2.py  3.py
Company/Twitter/: 1.py
Company/Wepay/: Alerter.py
Company/幻方/: csv.py  dfs.py
HuaHua/: 1.py  1004.py  12.py  1208..py  1227.py  1239.py  15.py  316.py  409.py  41.py  456.py  560.py  605.py  76.py  84.py  904.py  962.py  992.py  SongGenre.py
HuaHua/Amazon/: 1.py  2.py  973.py  Amazon.py
HuaHua/BS/: 162.py  33.py  378.py  668.py  69.py  719.py  74.py  81.py  875.py
HuaHua/BST/: 230.py  (+2 more)
Indeed/: Duel.cpp
Microsoft/: Microsoft List.txt
Wepay/: Leapyear.py
hard/: .#765.py  10.py  124.py  126.py  128.py  140.py  146.py  212.py  239.py  298.py  312.py  315.py  32.py  381.py  4.py  44.py  72.py  76.cpp  76.py  765.py  818.py  84.py  85.py  887.py  924.py
medium/: 130.py  179.py  18.py  210.py  22.py  238.cpp  240.cpp  29.py  3.py  300.py  322.py  324.cpp  324.h  329.cpp  377.py  378.cpp  384.py  40.py  41.cpp  416.py  42.cpp  46.py  47.py  473.py  49.py  494.py  542.py  62.cpp  740.cpp  79.cpp  90.py  91.cpp  94.py  98.py
(+200 files in other folders)
